--- a/main.html
+++ b/main.html
@@ -1,16 +1,117 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Dog Adoption Application</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f8fb;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
 
+    form {
+      background-color: #fff;
+      padding: 30px 40px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 500px;
+    }
+
+    h2 {
+      text-align: center;
+      color: #333;
+      margin-bottom: 25px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 8px;
+      font-weight: bold;
+      color: #444;
+    }
+
+    input[type="text"],
+    select {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 20px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 16px;
+    }
+
+    select[multiple] {
+      height: 100px;
+    }
+
+    .checkbox-group {
+      margin-bottom: 20px;
+    }
+
+    .checkbox-group label {
+      font-weight: normal;
+      display: flex;
+      align-items: center;
+    }
+
+    .checkbox-group input {
+      margin-right: 10px;
+    }
+
+    input[type="submit"] {
+      background-color: #4CAF50;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 16px;
+      width: 100%;
+    }
+
+    input[type="submit"]:hover {
+      background-color: #45a049;
+    }
+  </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <form>
+    <h2>Dog Adoption Application</h2>
+
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" placeholder="Name" required>
+
+    <label for="phone">Phone Number</label>
+    <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
+
+    <label for="address">Address</label>
+    <input type="text" id="address" name="address" placeholder="Address" required>
+
+    <div class="checkbox-group">
+      <label>
+        <input type="checkbox" id="dogExperience" name="dogExperience" value="Have you ever lived with a Dog before?">
+        Have you ever lived with a Dog before?
+      </label>
+    </div>
+
+    <label for="breeds">Please select your preferred breeds</label>
+    <select id="breeds" name="breeds" multiple>
+      <option value="labrador">Labrador Retriever</option>
+      <option value="germanshepherd">German Shepherd</option>
+      <option value="goldenretriever">Golden Retriever</option>
+      <option value="bulldog">Bulldog</option>
+      <option value="beagle">Beagle</option>
+    </select>
+
+    <input type="submit" value="Submit">
+  </form>
 
 </body>
-
 </html>
