--- a/main.html
+++ b/main.html
@@ -82,7 +82,7 @@
 </head>
 <body>
 
-  <form>
+  <form method="POST" action="/submit-application">
     <h2>Dog Adoption Application</h2>
 
     <label for="name">Name</label>
@@ -102,7 +102,7 @@
     </div>
 
     <label for="breeds">Please select your preferred breeds</label>
-    <select id="breeds" name="breeds" multiple>
+    <select id="breeds" name="breeds[]" multiple>
       <option value="labrador">Labrador Retriever</option>
       <option value="germanshepherd">German Shepherd</option>
       <option value="goldenretriever">Golden Retriever</option>
