--- a/main.html
+++ b/main.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dog Adoption Application</title>
   <style>
     body {
@@ -86,23 +86,23 @@
     <h2>Dog Adoption Application</h2>
 
     <label for="name">Name</label>
-    <input type="text" id="name" name="name" placeholder="Name" required>
+    <input type="text" id="name" name="name" placeholder="Name" required />
 
     <label for="phone">Phone Number</label>
-    <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
+    <input type="text" id="phone" name="phone" placeholder="Phone Number" required />
 
     <label for="address">Address</label>
-    <input type="text" id="address" name="address" placeholder="Address" required>
+    <input type="text" id="address" name="address" placeholder="Address" required />
 
     <div class="checkbox-group">
       <label>
-        <input type="checkbox" id="dogExperience" name="dogExperience" value="Have you ever lived with a Dog before?">
+        <input type="checkbox" id="checkbox" name="dogExperience" value="Have you ever lived with a Dog before?" />
         Have you ever lived with a Dog before?
       </label>
     </div>
 
-    <label for="breeds">Please select your preferred breeds</label>
-    <select id="breeds" name="breeds[]" multiple>
+    <label for="multiSelect">Please select your preferred breeds</label>
+    <select id="multiSelect" name="breeds[]" multiple>
       <option value="labrador">Labrador Retriever</option>
       <option value="germanshepherd">German Shepherd</option>
       <option value="goldenretriever">Golden Retriever</option>
@@ -110,7 +110,7 @@
       <option value="beagle">Beagle</option>
     </select>
 
-    <input type="submit" value="Submit">
+    <input type="submit" id="submit" value="Submit" />
   </form>
 
 </body>
